--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,7 +30,7 @@ body,
   }
 
   .tab {
-    @apply relative flex w-full cursor-pointer items-center justify-center gap-3 whitespace-nowrap rounded-lg bg-white px-4 py-3 
+    @apply relative flex cursor-pointer items-center justify-center gap-3 whitespace-nowrap rounded-lg bg-white px-4 py-3 
     text-center font-display capitalize text-ship-gray-500 outline-none transition-colors hover:bg-ship-gray-50;
   }
 
