--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@ body,
 
   .tab {
     @apply relative flex cursor-pointer items-center justify-center gap-3 whitespace-nowrap rounded-lg bg-white px-4 py-3 
-    text-center font-display capitalize text-ship-gray-500 outline-none transition-colors hover:bg-ship-gray-50;
+    text-center font-display text-sm capitalize text-ship-gray-500 outline-none transition-colors hover:bg-ship-gray-50;
   }
 
   .tab-active {
