pagination on other routes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,16 +43,16 @@ body,
   }
 
   .paginate-button {
-    @apply flex gap-2 rounded-lg border border-gray-300 px-3 py-2 hover:bg-primary-50 hover:text-primary-500;
+    @apply flex gap-2 rounded-lg border border-gray-300 px-3 py-2 hover:bg-gray-100 hover:text-primary-700;
   }
 
   .paginate-link {
     @apply flex min-w-[30px] items-center justify-center rounded-lg border border-gray-300 
-        px-2 py-2 text-center hover:bg-gray-100 hover:text-primary-500;
+        px-2 py-2 text-center hover:bg-gray-100;
   }
 
   .paginate-link-active {
-    @apply border-0 bg-primary-700 text-white hover:bg-primary-700 hover:text-white;
+    @apply border-primary-300 bg-primary-200 text-primary-900 hover:bg-primary-200 hover:text-primary-900;
   }
 
   .paginate-break {
