--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,6 +64,17 @@ body,
   }
 }
 
+.grid-lines {
+  background-image: repeating-linear-gradient(#ccc 0 1px, transparent 1px 100%),
+  repeating-linear-gradient(90deg, #ccc 0 1px, transparent 1px 100%);
+  /** 
+  * - 10px -> grid spacing  (px)
+  * - 12 -> number of cols  (grid unit).
+  * - 75px -> row height    (px)
+  */
+  background-size: calc((100% / 9)) 36px;
+}
+
 .clip-path {
   clip-path: inset(0 0 0 50%);
 }
