--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,6 +81,14 @@ body,
   }
 }
 
+.page-landscape {
+  @media print {
+    @page {
+      size: landscape;
+    }
+  }
+}
+
 .grid-lines {
   background-image: repeating-linear-gradient(#ccc 0 1px, transparent 1px 100%),
     repeating-linear-gradient(90deg, #ccc 0 1px, transparent 1px 100%);
